# vicviewer

./: .gitignore  CHANGELOG.md  GUIA_VICVIEWER_v17.md  INSTRUCCIONES_OPTIMIZACION_VICVIEWER.md  README.md
backup_v1.5.2/app/: CMakeLists.txt
backup_v1.5.2/modules/: CMakeLists.txt
backup_v1.5.2/modules/capture/: CMakeLists.txt
backup_v1.5.2/modules/capture/src/: FrameScaler.cpp  GdiCapturer.cpp  GdiCapturer.h
backup_v1.5.2/modules/core/: CMakeLists.txt
backup_v1.5.2/modules/core/include/: Metrics.h
backup_v1.5.2/modules/core/src/: AppContext.cpp
backup_v1.5.2/modules/decoder/: CMakeLists.txt
backup_v1.5.2/modules/encoder/include/: ColorConvert.h  EncodedFrame.h  NvencEncoder.h  VideoEncoder.h
backup_v1.5.2/modules/encoder/src/: ColorConvert.cpp  NvencEncoder.cpp  SimpleVp8Encoder.cpp
backup_v1.5.2/modules/input/: CMakeLists.txt
backup_v1.5.2/modules/input/include/: InputBatcher.h  InputInjector.h
backup_v1.5.2/modules/input/src/: InputBatcher.cpp
backup_v1.5.2/modules/logging/include/: Logger.h
backup_v1.5.2/modules/matchmaking/src/: MatchmakerClient.cpp
backup_v1.5.2/modules/pipeline/include/: HostSession.h  ViewerSession.h
backup_v1.5.2/modules/pipeline/src/: HostSession.cpp  ViewerSession.cpp
backup_v1.5.2/modules/transport/include/: TransportProtocol.h  TunnelAgent.h
backup_v1.5.2/modules/transport/src/: Transport_stub.cpp  TunnelAgent.cpp  TunnelFallback.h
backup_v1.5.2/modules/ui/: CMakeLists.txt
backup_v1.5.2/modules/ui/include/vic/ui/: AntiAbuse.h
backup_v1.5.2/modules/ui/src/: AntiAbuse.cpp  FrameRenderer.cpp  VicViewerUI.cpp
backup_v1.5.2/resources/: app.rc
backup_v1.5.2/service/: main.cpp
vic_viewer/: .gitignore  DOCUMENTACION_INFRAESTRUCTURA.md  README.md  REFERENCIA_RAPIDA_VPS.md  launch_test.ps1  prepare_live_test.ps1  test_connectivity.ps1
vic_viewer/matchmaker/: README.md  package-lock.json  package.json  tsconfig.json
vic_viewer/matchmaker/deploy/: install_matchmaker_vps.sh
vic_viewer/matchmaker/src/: server.ts
vic_viewer/scripts/: bootstrap.ps1  deploy-matchmaker.sh  deploy-tunnel.sh  diagnose_matchmaker_vps.sh  fix_matchmaker_vps.ps1  prepare_dist.ps1  provision_vps.sh  remote_install.bat  remote_install.sh  restart_matchmaker.ps1  restart_matchmaker.sh  run-matchmaker.ps1  run-tunnel.ps1  run-vicviewer.ps1  test_host_registration.ps1
vic_viewer/vicviewer/: CMakeLists.txt
vic_viewer/vicviewer/app/: debug_main.cpp  main.cpp
vic_viewer/vicviewer/dist-wan/: vicviewer_service.cfg
vic_viewer/vicviewer/docs/: NVENC_SETUP.md
vic_viewer/vicviewer/modules/capture/include/: DesktopCapturer.h  DesktopFrame.h  FrameScaler.h
vic_viewer/vicviewer/modules/capture/src/: DesktopCapturer.cpp
vic_viewer/vicviewer/modules/core/include/: AppContext.h
vic_viewer/vicviewer/modules/core/src/: Metrics.cpp
vic_viewer/vicviewer/modules/decoder/include/: VideoDecoder.h
vic_viewer/vicviewer/modules/decoder/src/: SimpleVp8Decoder.cpp
vic_viewer/vicviewer/modules/encoder/: CMakeLists.txt
vic_viewer/vicviewer/modules/encoder/include/: nvenc_api.h
vic_viewer/vicviewer/modules/input/include/: InputEvents.h
vic_viewer/vicviewer/modules/input/src/: InputInjector.cpp
vic_viewer/vicviewer/modules/logging/: CMakeLists.txt
vic_viewer/vicviewer/modules/logging/src/: Logger.cpp
vic_viewer/vicviewer/modules/matchmaking/: CMakeLists.txt
vic_viewer/vicviewer/modules/matchmaking/include/: MatchmakerClient.h
vic_viewer/vicviewer/modules/pipeline/: CMakeLists.txt
vic_viewer/vicviewer/modules/pipeline/include/: HostSession.h  StreamConfig.h  ViewerSession.h
vic_viewer/vicviewer/modules/pipeline/src/: HostSession.cpp  ViewerSession.cpp  ViewerSession.cpp.bak  ViewerSession_1.cpp
vic_viewer/vicviewer/modules/transport/: CMakeLists.txt
vic_viewer/vicviewer/modules/transport/include/: Transport.h
vic_viewer/vicviewer/modules/transport/src/: Transport.cpp  TunnelFallback.cpp
vic_viewer/vicviewer/modules/ui/include/: FrameRenderer.h  VicViewerUI.h
vic_viewer/vicviewer/modules/ui/src/: AntiAbuse.cpp  VicViewerUI.cpp
vic_viewer/vicviewer/resources/: convert-to-ico.ps1
vic_viewer/vicviewer/service/: CMakeLists.txt
vic_viewer/vicviewer/tests/: CMakeLists.txt  EndToEndHostViewerTest.cpp  VideoPipelineTests.cpp  benchmark_decoder.cpp  benchmark_multirez.cpp  benchmark_perf.cpp  test_nvenc.cpp
